[package]
name = "rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["hello-wasm"]

[workspace.package]
edition = "2021"
rust-version = "1.72"

[profile.release.package.hello-wasm]
opt-level = "s"